--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,3 +3,16 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
     uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    secrets: inherit
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Inject Secret into Overlay
+        run: |
+          mkdir -p ${{ github.workspace }}/config
+          cp config/password-overlay.dtsi.template ${{ github.workspace }}/config/password-overlay.dtsi
+          sed -i "s|<PASSWORD_MACRO>|$(echo '${{ secrets.MACRO_PASSWORD }}' | sed 's/./\&kp \0 /g')|g" ${{ github.workspace }}/config/password-overlay.dtsi
+
+      - name: Set Overlay Variable
+        run: echo "extra_cmake_args=-DOVERLAY_CONFIG=${{ github.workspace }}/config/password-overlay.dtsi" >> $GITHUB_ENV
