--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set Output for Config Path
         id: set_output
         run: |
-          echo ""modified_config_path=${{ github.workspace }}/config" >> $GITHUB_ENV
+          echo "modified_config_path=${{ github.workspace }}/config" >> $GITHUB_ENV
           echo "::set-output modified_config_path=${{ github.workspace }}/config" 
 
   build:
